--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-
 }
 li {
   list-style-type: none;
@@ -57,11 +56,9 @@ body {
 .upper-right a {
   font-size: 13px;
   color: rgba(0, 0, 0, 0.87);
-  height: 100%;
 }
 .upper-right .material-icons {
   color: #5f6368;
-  margin: 12px;
 }
 #account {
   font-size: 14px;
@@ -79,14 +76,139 @@ a:hover {
 .shadow {
   height: 40px;
   width: 40px;
-  border: 1px solid red;
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 1px solid transparent;
   border-radius: 50%;
-  position: relative;
-  right: 12px
 }
 .shadow:hover {
   background-color: rgba(60, 64, 67, 0.08);
+}
+#account:hover {
+  background-color: #2b7de9;
+}
+
+.content {
+  height: calc(100% - 60px);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+}
+.wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 500px;
+}
+.logo {
+  height: 92px;
+  aspect-ratio: auto 272 / 92;
+  margin-bottom: 30px;
+}
+.search-bar {
+  border: 1px solid #dfe1e5;
+  width: 584px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  border-radius: 24px;
+  padding: 15px;
+  margin-bottom: 30px;
+}
+.search-bar:hover {
+  border: 1px solid transparent;
+  box-shadow: 0px 1px 6px rgb(169, 169, 169);
+}
+.search-input {
+  flex-grow: 1;
+  height: 40px;
+  margin: 0 15px;
+  font-size: 16px;
+  border: none;
+}
+.search-bar span {
+  font-size: 22px;
+  color: #9aa0a6;
+}
+.search-buttons {
+  height: 36px;
+}
+.google-search {
+  font-size: 14px;
+  font-family: Roboto, arial, sans-serif;
+  height: 100%;
+  border-radius: 4px;
+  border: none;
+  padding: 0 16px;
+  background-color: #f8f9fa;
+  margin: 0 4px;
+}
+.feeling-lucky {
+  font-size: 14px;
+  font-family: Roboto, arial, sans-serif;
+  height: 100%;
+  border-radius: 4px;
+  border: none;
+  padding: 0 16px;
+  background-color: #f8f9fa;
+  margin: 0 4px;
+}
+.google-search:hover {
+  border: 1px solid #dadce0;
+  box-shadow: 0px 1px 1px #dadce0;
+}
+.feeling-lucky:hover {
+  border: 1px solid #dadce0;
+  box-shadow: 0px 1px 1px #dadce0;
+}
+footer {
+  background-color: #f2f2f2;
+  height: 100px;
+}
+.footer-contents {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.upper-foot {
+  color: #70757a;
+  height: 50%;
+}
+.upper-foot span {
+  color: rgb(52, 160, 52);
+}
+.lower-foot {
+  height: 50%;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.lower-left {
+  display: flex;
+  width: auto;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.lower-right {
+  display: flex;
+  width: auto;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.lower-left li a {
+  color: #70757a;
+  padding: 0 15px;
+}
+.lower-right li a {
+  color: #70757a;
+  padding: 0 15px;
 }
